# msft_ros_pkgs

./: README.md
msft_colcon_env/: CMakeLists.txt  package.xml
msft_colcon_env/env-hooks/: msft_colcon_env.bat.in  msft_colcon_env.sh.in  msft_colcon_qt.bat.in  msft_colcon_qt.sh.in
msft_ros2_env/: CMakeLists.txt  package.xml
msft_ros2_env/env-hooks/: external_prefix.bat.in  external_prefix.dsv.in
msft_ros_env/: CMakeLists.txt  package.xml
msft_ros_env/env-hooks/: msft_ros_qt.bat.in  msft_ros_qt.sh.in
msft_ros_pkgs/: CMakeLists.txt  package.xml
msft_ros_vcpkg/: CMakeLists.txt  package.xml
msft_ros_vcpkg/env-hooks/: msft_ros_vcpkg.bat.in  msft_ros_vcpkg.sh.in
rosonwindows_pkgs/: CMakeLists.txt  package.xml
rosonwindows_vcpkg/: CMakeLists.txt  package.xml
rosonwindows_vcpkg/env-hooks/: rosonwindows_vcpkg.bat.in
